feat: adds clients page

--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -10,8 +10,14 @@
   <body class="flex flex-col bg-black h-screen w-screen text-white">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="border-white border-2 w-80 rounded-2xl m-auto">
+      <div class="py-5 px-5 text-3xl">
+          nak-auth
+      </div>
       <div class="py-5 px-5">
-        HOMMMMMME
+        <a href="/login">Login</a>
+      </div>
+      <div class="py-5 px-5">
+        <a href="/clients">Clients</a>
       </div>
     </div>
     
