--- a/src/templates/pages/clients.html
+++ b/src/templates/pages/clients.html
@@ -1,4 +1,4 @@
-{{define "loginLayout"}}
+{{define "clientLayout"}}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -28,4 +28,4 @@
 </html>
 {{end}}
 
-{{template "loginLayout" .}}
+{{template "clientLayout" .}}
