--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -1,3 +1,4 @@
+{{define "homeLayout"}}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,3 +24,6 @@
     
   </body>
 </html>
+{{end}}
+
+{{template "homeLayout" .}}
